--- a/deploy/olm-catalog/test/7.11.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/7.11.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -6,8 +6,8 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Integration & Delivery
     certified: "true"
-    containerImage: registry.stage.redhat.io/rhpam-7/rhpam-rhel8-operator:7.11.0
-    createdAt: "2021-03-08 18:26:05"
+    containerImage: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.11.0
+    createdAt: "2021-03-23 08:38:44"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.11.0-1
+  name: businessautomation-operator.7.11.0-1-dev-krdrjj5f5h
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -169,25 +169,25 @@ spec:
                 - name: DEBUG
                   value: "false"
                 - name: RELATED_IMAGE_DM_KIESERVER_IMAGE_7.11.0
-                  value: registry.stage.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.11.0
+                  value: registry-proxy.engineering.redhat.com/rhdm-7/rhdm-kieserver-rhel8:7.11.0
                 - name: RELATED_IMAGE_DM_CONTROLLER_IMAGE_7.11.0
-                  value: registry.stage.redhat.io/rhdm-7/rhdm-controller-rhel8:7.11.0
+                  value: registry-proxy.engineering.redhat.com/rhdm-7/rhdm-controller-rhel8:7.11.0
                 - name: RELATED_IMAGE_DM_DC_IMAGE_7.11.0
-                  value: registry.stage.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.11.0
+                  value: registry-proxy.engineering.redhat.com/rhdm-7/rhdm-decisioncentral-rhel8:7.11.0
                 - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.11.0
-                  value: registry.stage.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.11.0
+                  value: registry-proxy.engineering.redhat.com/rhpam-7/rhpam-kieserver-rhel8:7.11.0
                 - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.11.0
-                  value: registry.stage.redhat.io/rhpam-7/rhpam-controller-rhel8:7.11.0
+                  value: registry-proxy.engineering.redhat.com/rhpam-7/rhpam-controller-rhel8:7.11.0
                 - name: RELATED_IMAGE_PAM_BC_IMAGE_7.11.0
-                  value: registry.stage.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.11.0
+                  value: registry-proxy.engineering.redhat.com/rhpam-7/rhpam-businesscentral-rhel8:7.11.0
                 - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_7.11.0
-                  value: registry.stage.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.11.0
+                  value: registry-proxy.engineering.redhat.com/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.11.0
                 - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_7.11.0
-                  value: registry.stage.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.11.0
+                  value: registry-proxy.engineering.redhat.com/rhpam-7/rhpam-smartrouter-rhel8:7.11.0
                 - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_7.11.0
-                  value: registry.stage.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.11.0
+                  value: registry-proxy.engineering.redhat.com/rhpam-7/rhpam-process-migration-rhel8:7.11.0
                 - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.11.0
-                  value: registry.stage.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.11.0
+                  value: registry-proxy.engineering.redhat.com/rhpam-7/rhpam-dashbuilder-rhel8:7.11.0
                 - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.11.0
                   value: registry.redhat.io/openshift3/ose-cli:v3.11
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.11.0
@@ -246,7 +246,7 @@ spec:
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.1
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_3
                   value: registry.redhat.io/openshift3/oauth-proxy:latest
-                image: registry.stage.redhat.io/rhpam-7/rhpam-rhel8-operator:7.11.0
+                image: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.11.0
                 imagePullPolicy: Always
                 name: business-automation-operator
                 resources: {}
@@ -413,7 +413,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.11.0-1
+    operated-by: businessautomation-operator.7.11.0-1-dev-krdrjj5f5h
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -422,12 +422,12 @@ spec:
   maintainers:
   - email: bsig-cloud@redhat.com
     name: Red Hat
-  maturity: stable
+  maturity: test
   provider:
     name: Red Hat
   replaces: businessautomation-operator.7.10.1-1
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.11.0-1
-  version: 7.11.0-1
+      operated-by: businessautomation-operator.7.11.0-1-dev-krdrjj5f5h
+  version: 7.11.0-1+krdrjj5f5h
