[RHPAM-3504] remove several ocp3 specific lines and configs
Signed-off-by: Tommy Hughes <tohughes@redhat.com>

--- a/config/7.10.1/envs/rhpam-authoring-ha.yaml
+++ b/config/7.10.1/envs/rhpam-authoring-ha.yaml
@@ -337,6 +337,6 @@ others:
             application: "[[.ApplicationName]]"
           annotations:
             description: Provides a service for accessing the application over Hot Rod protocol.
-            service.alpha.openshift.io/serving-cert-secret-name: datagrid-service-certs
+            service.beta.openshift.io/serving-cert-secret-name: datagrid-service-certs
 ## ES/AMQ END
 
