--- a/deploy/olm-catalog/test/7.10.1-1/manifests/businessautomation-operator.7.10.1-1.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/7.10.1-1/manifests/businessautomation-operator.7.10.1-1.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.10.1
-    createdAt: "2021-03-08 16:16:40"
+    createdAt: "2021-03-23 11:07:23"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.10.1-1-dev-mlq4w5dgks
+  name: businessautomation-operator.7.10.1-1-dev-bvv6r6d9fk
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -272,8 +272,6 @@ spec:
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.2
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.1
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.1
-                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_3
-                  value: registry.redhat.io/openshift3/oauth-proxy:latest
                 image: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.10.1
                 imagePullPolicy: Always
                 name: business-automation-operator
@@ -441,7 +439,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.10.1-1-dev-mlq4w5dgks
+    operated-by: businessautomation-operator.7.10.1-1-dev-bvv6r6d9fk
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -457,5 +455,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.10.1-1-dev-mlq4w5dgks
-  version: 7.10.1-1+mlq4w5dgks
+      operated-by: businessautomation-operator.7.10.1-1-dev-bvv6r6d9fk
+  version: 7.10.1-1+bvv6r6d9fk
