--- a/deploy/olm-catalog/prod/7.10.1-1/manifests/businessautomation-operator.7.10.1-1.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/7.10.1-1/manifests/businessautomation-operator.7.10.1-1.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.stage.redhat.io/rhpam-7/rhpam-rhel8-operator:7.10.1
-    createdAt: "2021-03-23 11:07:23"
+    createdAt: "2021-03-08 16:16:40"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -272,6 +272,8 @@ spec:
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.2
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.1
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.1
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_3
+                  value: registry.redhat.io/openshift3/oauth-proxy:latest
                 image: registry.stage.redhat.io/rhpam-7/rhpam-rhel8-operator:7.10.1
                 imagePullPolicy: Always
                 name: business-automation-operator
