--- a/config/7.11.0/dashbuilder/rhpam-standalone-dashbuilder.yaml
+++ b/config/7.11.0/dashbuilder/rhpam-standalone-dashbuilder.yaml
@@ -297,7 +297,7 @@ dashbuilder:
                   - name: "[[.ApplicationName]]-[[.Dashbuilder.Name]]-[[.Constants.KeystoreVolumeSuffix]]"
                     mountPath: "/etc/dashbuilder-secret-volume"
                     readOnly: true
-                  #[[if .UseOpenshiftCA]]
+                  #[[if .OpenshiftCaBundle]]
                   - name: "[[.ApplicationName]]-truststore"
                     mountPath: "/etc/openshift-truststore-volume"
                     readOnly: true
@@ -310,7 +310,7 @@ dashbuilder:
               - name: "[[.ApplicationName]]-[[.Dashbuilder.Name]]-[[.Constants.KeystoreVolumeSuffix]]"
                 secret:
                   secretName: "[[.Dashbuilder.KeystoreSecret]]"
-              #[[if .UseOpenshiftCA]]
+              #[[if .OpenshiftCaBundle]]
               - name: "[[.ApplicationName]]-truststore"
                 secret:
                   secretName: "[[.ApplicationName]]-truststore"
