--- a/deploy/olm-catalog/dev/7.10.1-2/manifests/businessautomation-operator.7.10.1-2.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.10.1-2/manifests/businessautomation-operator.7.10.1-2.clusterserviceversion.yaml
@@ -6,8 +6,8 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Integration & Delivery
     certified: "false"
-    containerImage: quay.io/kiegroup/kie-cloud-operator:7.11.0
-    createdAt: "2021-04-08 15:31:30"
+    containerImage: quay.io/kiegroup/kie-cloud-operator:7.10.1
+    createdAt: "2021-04-08 15:11:33"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.11.0-1-dev-8qfdkpq94c
+  name: businessautomation-operator.7.10.1-2-dev-f8px4zf75c
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -168,36 +168,34 @@ spec:
                   value: "true"
                 - name: DEBUG
                   value: "false"
-                - name: RELATED_IMAGE_DM_KIESERVER_IMAGE_7.11.0
-                  value: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.11.0
-                - name: RELATED_IMAGE_DM_CONTROLLER_IMAGE_7.11.0
-                  value: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.11.0
-                - name: RELATED_IMAGE_DM_DC_IMAGE_7.11.0
-                  value: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.11.0
-                - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.11.0
-                  value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.11.0
-                - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.11.0
-                  value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.11.0
-                - name: RELATED_IMAGE_PAM_BC_IMAGE_7.11.0
-                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.11.0
-                - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_7.11.0
-                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.11.0
-                - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_7.11.0
-                  value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.11.0
-                - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_7.11.0
-                  value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.11.0
-                - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.11.0
-                  value: registry.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.11.0
-                - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.11.0
-                  value: registry.redhat.io/openshift4/ose-cli:v4.7
-                - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.11.0
+                - name: RELATED_IMAGE_DM_KIESERVER_IMAGE_7.9.1
+                  value: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.9.1
+                - name: RELATED_IMAGE_DM_CONTROLLER_IMAGE_7.9.1
+                  value: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.9.1
+                - name: RELATED_IMAGE_DM_DC_IMAGE_7.9.1
+                  value: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.9.1
+                - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.9.1
+                  value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.9.1
+                - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.9.1
+                  value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.9.1
+                - name: RELATED_IMAGE_PAM_BC_IMAGE_7.9.1
+                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.9.1
+                - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_7.9.1
+                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.9.1
+                - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_7.9.1
+                  value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.9.1
+                - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_7.9.1
+                  value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.9.1
+                - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.9.1
+                  value: registry.redhat.io/openshift3/ose-cli:v3.11
+                - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.9.1
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
-                - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.11.0
+                - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.9.1
                   value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
-                - name: RELATED_IMAGE_DATAGRID_IMAGE_7.11.0
+                - name: RELATED_IMAGE_DATAGRID_IMAGE_7.9.1
                   value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
-                - name: RELATED_IMAGE_BROKER_IMAGE_7.11.0
-                  value: registry.redhat.io/amq7/amq-broker:7.8
+                - name: RELATED_IMAGE_BROKER_IMAGE_7.9.1
+                  value: registry.redhat.io/amq7/amq-broker:7.7
                 - name: RELATED_IMAGE_DM_KIESERVER_IMAGE_7.10.1
                   value: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.10.1
                 - name: RELATED_IMAGE_DM_CONTROLLER_IMAGE_7.10.1
@@ -219,7 +217,7 @@ spec:
                 - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.10.1
                   value: registry.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.10.1
                 - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.10.1
-                  value: registry.redhat.io/openshift4/ose-cli:v4.7
+                  value: registry.redhat.io/openshift3/ose-cli:v3.11
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.10.1
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.10.1
@@ -228,13 +226,55 @@ spec:
                   value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
                 - name: RELATED_IMAGE_BROKER_IMAGE_7.10.1
                   value: registry.redhat.io/amq7/amq-broker:7.8
+                - name: RELATED_IMAGE_DM_KIESERVER_IMAGE_7.10.0
+                  value: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.10.0
+                - name: RELATED_IMAGE_DM_CONTROLLER_IMAGE_7.10.0
+                  value: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.10.0
+                - name: RELATED_IMAGE_DM_DC_IMAGE_7.10.0
+                  value: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.10.0
+                - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.10.0
+                  value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.10.0
+                - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.10.0
+                  value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.10.0
+                - name: RELATED_IMAGE_PAM_BC_IMAGE_7.10.0
+                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.10.0
+                - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_7.10.0
+                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.10.0
+                - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_7.10.0
+                  value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.10.0
+                - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_7.10.0
+                  value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.10.0
+                - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.10.0
+                  value: registry.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.10.0
+                - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.10.0
+                  value: registry.redhat.io/openshift3/ose-cli:v3.11
+                - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.10.0
+                  value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
+                - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.10.0
+                  value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
+                - name: RELATED_IMAGE_DATAGRID_IMAGE_7.10.0
+                  value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
+                - name: RELATED_IMAGE_BROKER_IMAGE_7.10.0
+                  value: registry.redhat.io/amq7/amq-broker:7.8
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_LATEST
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:latest
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.7
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.7
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.6
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.6
-                image: quay.io/kiegroup/kie-cloud-operator:7.11.0
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.5
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.5
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.4
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.4
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.3
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.3
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.2
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.2
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.1
+                  value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.1
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_3
+                  value: registry.redhat.io/openshift3/oauth-proxy:latest
+                image: quay.io/kiegroup/kie-cloud-operator:7.10.1
                 imagePullPolicy: Always
                 name: business-automation-operator
                 resources: {}
@@ -401,21 +441,21 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.11.0-1-dev-8qfdkpq94c
+    operated-by: businessautomation-operator.7.10.1-2-dev-f8px4zf75c
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
   - name: Documentation
-    url: https://access.redhat.com/documentation/en-us/red_hat_process_automation_manager/7.11/#category-deploying-red-hat-process-automation-manager-on-openshift
+    url: https://access.redhat.com/documentation/en-us/red_hat_process_automation_manager/7.10/#category-deploying-red-hat-process-automation-manager-on-openshift
   maintainers:
   - email: bsig-cloud@redhat.com
     name: Red Hat
   maturity: dev
   provider:
     name: Red Hat
-  replaces: businessautomation-operator.7.10.1-2
+  replaces: businessautomation-operator.7.10.1-1
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.11.0-1-dev-8qfdkpq94c
-  version: 7.11.0-1+8qfdkpq94c
+      operated-by: businessautomation-operator.7.10.1-2-dev-f8px4zf75c
+  version: 7.10.1-2+f8px4zf75c
