--- a/deploy/olm-catalog/dev/7.11.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.11.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.11.0
-    createdAt: "2021-04-16 15:53:33"
+    createdAt: "2021-04-16 17:38:19"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.11.0-1-dev-xdmmzc5mcg
+  name: businessautomation-operator.7.11.0-1-dev-zlk855xnkf
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -401,7 +401,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.11.0-1-dev-xdmmzc5mcg
+    operated-by: businessautomation-operator.7.11.0-1-dev-zlk855xnkf
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -417,5 +417,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.11.0-1-dev-xdmmzc5mcg
-  version: 7.11.0-1+xdmmzc5mcg
+      operated-by: businessautomation-operator.7.11.0-1-dev-zlk855xnkf
+  version: 7.11.0-1+zlk855xnkf
